# uuid_cli

./: .gitignore  Cargo.toml  README.md  go.mod  go.sum  mix.exs  uuid  uuid_cli  uuid_cli.go
generator/: generator.go  generator_test.go
lib/: uuid_cli.ex
lib/uuid_cli/: config.ex  interface.ex  processor.ex
src/: main.rs
test/: uuid_cli_test.exs
test/uuid_cli/: config_test.exs  processor_test.exs  test_processor.exs
